--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     volumes:
       - ./app:/app
     command: 
-      sh -c "python manage.py runserver 127.0.0.1:8000/"
+      sh -c "python manage.py runserver /127.0.0.1:8000/"
